# auto-rsa

./: .deepsource.toml  .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LightDockerfile  README.md  add_task.html  allyAPI.py  auto-rsa.py  autoRSA.py  base.html  bbaeAPI.py  chaseAPI.py  custom_ping.html  dashboard.html  docker-compose.yml  dspacAPI.py  edit_task.html  entrypoint.sh  error.html  fennelAPI.py  fidelityAPI.py  firstradeAPI.py  helper.py  helperAPI.py  install_dependencies.py  manual_pending_trades.html  orderAPI.py  other_template.html  performance.html  plynkAPI.py  publicAPI.py  pyproject.toml  pythonRSA.py  renovate.json  requirements - Copy.txt  (+27 more)
.claude/agents/: broker-doctor.md  broker-onboarder.md  chase-trace-analyzer.md  edgar-classifier-tester.md  ledger-investigator.md  mac-mini-deploy-doctor.md  order-reconciler.md  release-safety-checker.md  session-health-auditor.md  signal-plan-validator.md  twofa-flow-mapper.md  vendored-patch-builder.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: docker-build-push-light.yml  docker-build-push-main.yml  docker-build-push.yml  docker-push.yml  dockerhub-description.yml  python-linting.yml  python-type-checking.yml  release.yml  security.yml  windows-installer.yml
.streamlit/: config.toml
admin/: rsa_license.py
deploy/macmini/: RUNBOOK.md  com.autorsa.autoexec-shadow.plist  com.autorsa.autosell.plist  com.autorsa.backup.plist  com.autorsa.edgar.plist
docs/: AUTO_EXECUTOR_DESIGN.md  BROKERAGES.md  CLOUDFLARE_LICENSE_BUILD.md  CONTRIBUTING.md  FILL_VERIFICATION_DESIGN.md  GUI.md  INSTALLATION.md  LICENSE_ADMIN_GUIDE.md  LICENSE_TIERS_DESIGN.md  MAC_MINI_DEPLOYMENT.md  SESSION_PERSISTENCE_DESIGN.md  SETUP_GUIDE.md  SIMPLE_MODE_DESIGN.md  TESTING_UNSIGNED_WINDOWS.md  USAGE.md  WINDOWS_INSTALLER_DESIGN.md  discordBot.md  robinhoodSetup.md  schwabSetup.md
docs/appscript/: PHASE5_OPERATOR_GUIDE.md  README.md  phase5_signal_types.gs  reverse_split_efts_paginated.gs  reverse_split_patches.gs
edgar_tests/: audit_broker_safety_test.py  autoexec_shadow_test.py  autosell_test.py  backup_bundle_test.py  backup_config_test.py  backup_drive_test.py  backup_runner_test.py  bbae_dspac_execute_outcome_test.py  broker_cap_test.py  broker_parse_input_test.py  browser_profile_cleanup_test.py  chase_account_scoped_test.py  chase_direct_order_test.py  chase_in_page_fetch_test.py  chase_request_timeout_test.py  chase_response_verify_test.py  corpus_test.py  dashboard_per_signal_type_test.py  edgar_classify_test.py  fetch_test.py  fidelity_iccmx_and_buy_button_test.py  fidelity_totp_test.py  fill_classifiers_test.py  friendly_errors_test.py  installer_pipeline_test.py  ledger_economic_test.py  ledger_hold_until_test.py  ledger_mark_fill_test.py  ledger_needs_review_test.py  license_bypass_test.py  license_client_killswitch_test.py  license_fingerprint_test.py  license_golden_test.py  license_manager_test.py  license_pre_trade_test.py  license_subaccount_cap_test.py  license_test_helpers.py  license_tiers_test.py  license_vault_gate_test.py  license_verify_test.py  (+13 more)
edgar_tests/fixtures/: .gitignore  README.md
gui_tests/: diagnostics_test.py  gui_core_test.py  holdings_test.py  license_tab_test.py  mode_test.py  parallel_engine_test.py  preflight_test.py  reconcile_test.py  retry_failed_test.py  run_lock_frozen_test.py  runner_timeline_test.py  signal_calendar_test.py  signal_gate_test.py  simple_mode_test.py  trade_beta_test.py  watchdog_test.py  wizard_test.py
guides/: discordBot.md  playwrightWindows.md  schwab2fa.py  schwabSetup.md  webullSetup.md
scripts/: audit_broker_safety.py
server/license-worker/: .gitignore  README.md  gen-keys.py  package.json  wrangler.toml
server/license-worker/golden/: golden.json  golden.mjs
server/license-worker/src/: admin_ui.js  index.js  sign.js
src/: __init__.py  auto_rsa.py  auto_rsa_parallel.py  brokers.py  cli.py  dispatch_api.py  helper_api.py  ledger.py  outcomes.py  session_audit.py  session_state.py
src/autoexec/: __init__.py  __main__.py  shadow.py
src/autosell/: __init__.py  __main__.py  finder.py
src/backup/: __init__.py  __main__.py  bundle.py  config.py  drive.py  runner.py
src/brokerages/: __init__.py  _browser_profile_cleanup.py  _chase_account_scoped_order.py  _chase_direct_order.py  _chase_fill.py  _chase_holdings_capture.py  _chase_holdings_retry.py  _chase_request_timeout.py  _fidelity_afterhours_limit.py  _fidelity_iccmx_and_buy_button.py  _fidelity_modal_dismiss.py  _fidelity_patchright.py  _robinhood_fill.py  bbae_api.py  chase_api.py  dspac_api.py  fennel_api.py  fidelity_api.py  fill_result.py  firstrade_api.py  public_api.py  robinhood_api.py  schwab_api.py  sofi_api.py  tasty_api.py  tornado_api.py  tradier_api.py  vanguard_api.py  webull_api.py  wellsfargo_api.py
src/dashboard/: __init__.py  per_signal_type.py
src/edgar/: __init__.py  __main__.py  classify.py  fetch.py  keys.py  market_calendar.py  producer.py  text.py
src/gui/: __init__.py  app.py  launch.py
src/gui/core/: __init__.py  brokers_meta.py  diagnostics.py  engine_proc.py  friendly_errors.py  holdings.py  logbus.py  manual_balances.py  mode.py  preflight.py  prompts.py  reconcile.py  results.py  runner.py  sheets.py  signal_plan.py  tickers.py  totp.py  vault.py  watchdog.py  wizard.py
src/license/: __init__.py  _keys.py  client.py  fingerprint.py  manager.py  telemetry.py  tiers.py  token_store.py  verify.py
src/vendors/fidelity/: __init__.py  fidelity.py
tastyworks/dxfeed/: mapped_item.py
tastyworks/models/: option_chain.py  order.py  order_type.py  security.py  underlying.py
